Archive2/6b/035e81f0c87a6b/output
main.cpp:11:22: error: use of undeclared identifier 'std'
        self->C_impl(std::move(a));
                     ^
1 error generated.
